--- a/templates/user/incident-form.html
+++ b/templates/user/incident-form.html
@@ -30,7 +30,7 @@
 			<h2>INCIDENT FORM</h2>
 		</div>
 		<div class="main">
-			<form  action="#" autocomplete="on" onsubmit="return false">
+			<form  action="#" autocomplete="off" onsubmit="return false">
 				<div class="row">
 				  	<div class="col-50">
 					  	<h2><span style="color:darkgreen">form-number</span> 266</h2>
