--- a/templates/admin/interventions.html
+++ b/templates/admin/interventions.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="../../js/script.js"></script>
 	<script src="../../js/session.js"></script>
+	<script src="../../js/search.js"></script>
 </head>
 <body>
 	<div class="container">
