--- a/templates/admin/redflags.html
+++ b/templates/admin/redflags.html
@@ -11,6 +11,7 @@
 	<link rel="icon" href="../../img/favicon.jpg" sizes="16x16 32x32" type="image/png">
 	<script src="../../js/script.js"></script>
 	<script src="../../js/session.js"></script>
+	<script src="../../js/search.js"></script>
 </head>
 <body>
 	<div class="container">
