--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -10,6 +10,7 @@
 	<link rel="icon" href="favicon.jpg" sizes="16x16 32x32" type="image/png">
 	<script src="../../js/script.js"></script>
 	<script src="../../js/session.js"></script>
+	<script src="../../js/search.js"></script>
 </head>
 <body>
 	<div class="container">
