--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -24,7 +24,7 @@
 			<h2>Welcome To IReporter</h2>
 		</div>
 		<div class="main" style="text-align: center;">
-			<form class="signup" id="Signup" action="#" style="border:1px solid #ccc"  autocomplete="off">
+			<form class="signup" id="Signup" action="#" style="border:1px solid #ccc"  autocomplete="off"  onsubmit="return false">
 		    <h1>Sign Up</h1>
 		    <hr>
 
