Modify file functionality

--- a/templates/user/dash.html
+++ b/templates/user/dash.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>DASHBOARD</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../../css/grid.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,9 +34,9 @@
 			  <div class="modal-content">
 				  <form class="modal-form" action="#">
 			        <img src="../../img/gent.jpeg" alt="John" style="width:35%">
-			        <h1 id="user_name"></h1>
-			        <p class="title">Software Developer/Computer Engineer</p>
-			        <p>Andela  Uganda</p>
+			        <h1 id="full_name"></h1>
+			        <p class="title" id="user_name"></p>
+			        <p id="user_email"></p>
 			        <div style="margin: 24px 0;">
 			          <a href="#"><i class="fa fa-instagram"></i></a> 
 			          <a href="#"><i class="fa fa-twitter-square"></i></a>  
@@ -80,7 +80,6 @@
 		</div>
 	</div>
 </body>
-<!-- <script src="../../js/intervention-user.js"></script> -->
 <script src="../../js/record-user.js"></script>
 <script src="../../js/table.js"></script>
 </html>
