--- a/templates/user/about.html
+++ b/templates/user/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About</title>
+	<title>ABOUT</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../../css/grid.css">
 	<link rel="icon" href="../../img/favicon.jpg" sizes="16x16 32x32" type="image/png">
@@ -15,8 +15,8 @@
 		<div class="nav-bar">
 			<nav>
 				<ul>
-					<li><a href="../../index.html">Index</a></li>
-					<li><a href="about.html">About</a></li>
+					<li><a href="../../index.html">INDEX</a></li>
+					<li><a href="about.html">ABOUT</a></li>
 				</ul>
 			</nav>
 		</div>
