--- a/templates/user/dash.html
+++ b/templates/user/dash.html
@@ -34,9 +34,9 @@
 			  <div class="modal-content">
 				  <form class="modal-form" action="#">
 			        <img src="../../img/gent.jpeg" alt="John" style="width:35%">
-			        <h1 id="user_name"></h1>
-			        <p class="title">Software Developer/Computer Engineer</p>
-			        <p>Andela  Uganda</p>
+			        <h1 id="full_name"></h1>
+			        <p class="title" id="user_name"></p>
+			        <p id="user_email"></p>
 			        <div style="margin: 24px 0;">
 			          <a href="#"><i class="fa fa-instagram"></i></a> 
 			          <a href="#"><i class="fa fa-twitter-square"></i></a>  
