--- a/css/form-grid.css
+++ b/css/form-grid.css
@@ -25,3 +25,15 @@
 	grid-area: mid;
 	grid-row: auto;
 }
+
+
+<script type="text/javascript">
+var elem = document.createElement("img");
+elem.setAttribute("src", "images/hydrangeas.jpg");
+document.getElementById("placehere").appendChild(elem);
+elem.setAttribute("height", "768");
+elem.setAttribute("width", "1024");
+elem.setAttribute("alt", "Flower");
+</script>
+
+
