--- a/templates/admin/interventions.html
+++ b/templates/admin/interventions.html
@@ -11,6 +11,7 @@
 	<link rel="icon" href="../../img/favicon.jpg" sizes="16x16 32x32" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="../../js/script.js"></script>
+	<script src="../../js/media.js"></script>
 	<script src="../../js/session.js"></script>
 	<script src="../../js/search.js"></script>
 </head>
