Update fetch message display

--- a/templates/user/redflags.html
+++ b/templates/user/redflags.html
@@ -30,7 +30,7 @@
 		<div class="sidebar">
 			<h2>User <span style="color:rgb(124,252,0)">Redflag</span> Records</h2>
 		</div>
-		<div class="main">
+		<div class="main" style="text-align: center;">
 			<div class="modal" id="myForm">
 			</div>
 			<div id="sucessRedflag" style="color: green"></div>
