--- a/templates/user/dash.html
+++ b/templates/user/dash.html
@@ -4,6 +4,7 @@
 	<title>DASHBOARD</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../../css/grid.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="icon" href="../../img/favicon.jpg" sizes="16x16 32x32" type="image/png">
 	<script src="../../js/script.js"></script>
@@ -60,7 +61,7 @@
 					<div class="card">
 					  <img src="../../img/interven.png" alt="Avatar" style="width:80%">
 					  <div class="card-container">
-					  	<button class="dash" onclick="intervention()"><i class="fas fa-people-carry" style="color: green"></i><b style="color: white"> Intervention Records: <b id="intervention-user">0</b></b></button>
+					  	<button class="dash" onclick="intervention()"><i class="far fa-people-carry" style="color: green"></i><b style="color: white"> Intervention Records: <b id="intervention-user">0</b></b></button>
 					  </div>
 					</div>
 				</td>
