--- a/templates/user/interventions.html
+++ b/templates/user/interventions.html
@@ -31,7 +31,7 @@
 		<div class="sidebar">
 			<h2>User <span style="color:rgb(124,252,0)">Intervention</span> Records</h2>
 		</div>
-		<div class="main">
+		<div class="main" style="text-align: center;">
 			<div class="modal" id="myForm">
 			</div>
 			<div id="sucessIntervention" style="color: green"></div>
